# zFORpSampleProject

./: CMakeLists.txt
fortran/: CMakeLists.txt  zFORp.h  zfp.f
include/: bitstream.h
src/: CMakeLists.txt  bitstream.c
tests/: CMakeLists.txt  ifortBug.c  zforpBitstream.c
